--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -508,6 +508,7 @@ html, body {
     height: 100%;
     -ms-flex: 1 0 auto;
     flex: 1 0 auto;
+    background: linear-gradient(324.43deg, #131313 41.97%, rgba(11, 28, 63, 0.51) 100.3%);
 }
 
 /* Работает в Chrome, Edge и Safari */
@@ -720,7 +721,7 @@ html, body {
 
 .games__inner__title {
     display: block;
-    margin: 3.6rem 0;
+    padding: 3.6rem 0;
     font-family: "Inter";
     font-style: normal;
     font-weight: 400;
@@ -763,7 +764,7 @@ html, body {
     -moz-column-gap: 0.8rem;
     column-gap: 0.8rem;
     margin-top: 14.991rem;
-    margin-bottom: 11.569rem;
+    padding-bottom: 8.569rem;
 }
 
 .games__inner__attribute__item {
@@ -947,6 +948,7 @@ html, body {
 }
 
 .accessories__inner {
+    padding-top: 3rem;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-direction: column;
